fix(copier): Fixed implementation throwing errors when keys did not exist and added cloneDeep method for implementation and specification references to prevent them from changing spec values.

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   ],
   "author": "Marnick van der Arend",
   "license": "MIT",
-  "repository": "https://github.com/MarnickvdA/ngx-translate-spec"
+  "repository": "https://github.com/MarnickvdA/ngx-translate-spec",
+  "dependencies": {
+    "lodash.clonedeep": "^4.5.0"
+  }
 }
